# minifylet

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
minifylet/: __init__.py  cli.py
tests/: test_cli.py
tests/data/: searchforthis_google-bookmarklet.js  searchforthis_google-bookmarklet.min.js  searchforthis_google_scholar-bookmarklet.js  searchforthis_google_scholar-bookmarklet.min.js  toggleshowvisited-bookmarklet.js  toggleshowvisited-bookmarklet.min.js
