[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minifylet"
version = "0.1.0"
description = "A bookmarklet minifier tool"
authors = [
  { name = "Wes Turner", email = "wes@wrd.nu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[project.scripts]
minifylet = "minifylet.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=minifylet --cov-report=term-missing"
testpaths = [
    "tests",
]
